--- a/RecordSheet/views/user_self.html
+++ b/RecordSheet/views/user_self.html
@@ -1,4 +1,5 @@
 % rebase('base.html', title='RecordSheet')
+% ses = www_session()
 <section>
     <form method=POST action="/me/password">
         <h3>Change password</h3>
@@ -8,6 +9,7 @@
         <input type=password name=new_password /><br/>
         <label>Confirm password</label>
         <input type=password name=confirm_password /><br/>
+        <input type="hidden" name="csrf-token" value="{{ses['csrf-token']}}" />
         <button>Save</button>
     </form>
 </section>
